Set minimum width of MapDiv, to avoid problem when too small.

--- a/src/SZ_wLayout.css
+++ b/src/SZ_wLayout.css
@@ -54,7 +54,7 @@ html, body, #outerBC { width: 100%; height: 100%; border: 0; padding: 0; margin:
 #linksPane  {background-color: var(--NoaaBgColor); padding: 5px; border: none; }      /*Q: Why need to repeat BGcolor? */
 #mapAndImageryBC  { }
 #mapWToolsBC  { border: double}
-#mapDiv  {}
+#mapDiv  { min-width: 560px }
   #coordinates  { position:absolute; left:60px; bottom:15px; color:#000; z-index:50; }
 #mapToolsExpando  { width: 350px}
 #mapToolsAccordion  {}
